--- a/css/styles.css
+++ b/css/styles.css
@@ -60,16 +60,22 @@ p {
   margin: 0px;
 }
 
+.container {
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 /* ------------------header---------------- */
 
 .header {
   background-color: var(--main-white-color);
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 215px;
-  width: 1600px;
   height: 80px;
+  justify-content: center;
 }
 
 .logo {
@@ -82,6 +88,7 @@ p {
 
 .header-contacts {
   display: flex;
+  align-items: center;
 }
 
 .header-container {
@@ -94,10 +101,10 @@ p {
   padding: 15px 0;
 }
 
-.logo {
+/* .logo {
   width: 145px;
   height: 31px;
-}
+} */
 
 .header-container .logo {
   margin-right: 93px;
@@ -135,10 +142,22 @@ p {
 
 /* ----------first page------------------- */
 
+.main {
+  display: flex;
+}
+
+.main-container {
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .hero {
   background-color: var(--background-black);
-  width: 1600px;
-  height: 600px;
+  /* width: 1200px; */
+  /* height: 600px; */
   display: flex;
   flex-direction: column;
 }
@@ -151,9 +170,7 @@ p {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-white-color);
-  width: 696px;
-  height: 120px;
-  margin: 200px 452px 30px 452px;
+  padding: 200px 252px 30px 252px;
 }
 
 .hero button {
@@ -167,7 +184,8 @@ p {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   width: 216px;
   height: 50px;
-  margin: 0px 692px 200px 692px;
+  /* margin: 0px 692px 200px 692px; */
+  margin: 0px auto 100px;
 }
 
 .hero button:hover,
@@ -181,13 +199,22 @@ p {
 }
 
 .features {
-  width: 1170px;
-  height: 98px;
-  margin: 94px 215px;
+  width: 1200px;
+  /* height: 98px;
+  margin: 94px 215px; */
+  margin-top: 94px;
+  margin-bottom: 94px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.features li {
+  width: 270px;
 }
 
 .features ul {
   display: flex;
+  justify-content: space-between;
 }
 
 .features .features h3 {
@@ -206,9 +233,11 @@ p {
 }
 
 .our-works {
-  width: 1170px;
+  /* width: 1170px;
   height: 386px;
-  margin: 0px 215px 94px 215px;
+  margin: 0px 215px 94px 215px; */
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .our-works ul {
@@ -230,16 +259,16 @@ p {
 
 .our-team ul {
   display: flex;
-  width: 1170px;
-  height: 368px;
+  /* width: 1170px;
+  height: 368px; */
   gap: 30px;
-  margin: 0px 215px 94px 215px;
+  /* margin: 0px 215px 94px 215px; */
 }
 
 .our-team {
   background-color: var(--background-portfolio-nav);
-  width: 1600px;
-  height: 648px;
+  /* width: 1600px;
+  height: 648px; */
 }
 
 .our-team li {
@@ -285,7 +314,7 @@ p {
   width: 1170px;
   height: 1360px;
   margin: 94px 215px;
-  }
+}
 
 .portfolio-button {
   display: flex;
