--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,6 @@ body {
   color: var(--primary-text-color);
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 .button {
   font-family: roboto, sans-serif;
   cursor: pointer;
@@ -69,21 +63,15 @@ img {
 
 .container {
   width: 1200px;
-  display: flex;
-  justify-content: space-between;
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
 }
 
 /* ------------------header---------------- */
 
 .header {
   background-color: var(--main-white-color);
-  display: flex;
-  align-items: center;
-  height: 80px;
-  justify-content: center;
-  border-bottom: 1px solid var(--header-border-color);
 }
 
 .logo {
@@ -97,16 +85,18 @@ img {
 .header-contacts {
   display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .header-container {
   display: flex;
   align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .header-list {
   display: flex;
-  padding: 15px 0;
 }
 
 .header-container .logo {
@@ -123,7 +113,10 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
-  padding-right: 50px;
+}
+
+.header li:not(:last-child) {
+  margin-right: 50px;
 }
 
 .tel-mail {
@@ -132,8 +125,6 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--tel-color);
-
-  padding-left: 50px;
 }
 
 .tel-mail:hover,
@@ -145,47 +136,36 @@ img {
 
 /* ----------first page------------------- */
 
-.main {
-  display: flex;
-}
-
-.main-container {
-  width: 1200px;
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .hero {
   background-color: var(--background-black);
-  display: flex;
-  flex-direction: column;
+  text-align: center;
+  margin-bottom: 94px;
+}
+
+.hero .container {
+  padding: 200px 250px 200px 250px;
 }
 
 .hero h1 {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-white-color);
-  padding: 200px 252px 30px 252px;
+  margin-bottom: 30px;
 }
 
 .hero button {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--main-white-color);
   background-color: var(--main-blue-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   width: 216px;
   height: 50px;
-  margin: 0px auto 100px;
 }
 
 .hero button:hover,
@@ -196,23 +176,13 @@ img {
 .features,
 .our-works {
   background-color: var(--main-white-color);
-}
-
-.features {
-  width: 1200px;
-  margin-top: 94px;
   margin-bottom: 94px;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
-.features li {
-  width: 270px;
-}
-
-.features ul {
+.features ul,
+.our-works ul {
   display: flex;
-  justify-content: space-between;
+  gap: 30px;
 }
 
 .features .features h3 {
@@ -221,6 +191,10 @@ img {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+.features h3 {
+  margin-bottom: 10px;
 }
 
 .features p {
@@ -233,14 +207,6 @@ img {
 .our-works {
   padding-left: 15px;
   padding-right: 15px;
-}
-
-.our-works ul {
-  gap: 30px;
-}
-
-.our-works ul {
-  display: flex;
 }
 
 .our-works h2,
@@ -260,15 +226,15 @@ img {
 
 .our-team {
   background-color: var(--background-portfolio-nav);
-  padding-left: 15px;
-  padding-right: 15px;
   padding-top: 94px;
   padding-bottom: 94px;
-  margin-top: 94px;
 }
 
 .our-team li {
   background-color: var(--main-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team h3 {
@@ -311,34 +277,34 @@ img {
   display: flex;
 }
 
-.portfolio-container {
-  width: 1200px;
-  display: flex;
-  flex-direction: column;
-  margin: 94px auto;
+.portfolio .container {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+.portfolio img {
+  display: block;
 }
 
 .portfolio-button {
   display: flex;
-  justify-content: space-between;
-  margin: auto;
-  width: 575px;
-  height: 54px;
-  align-items: flex-start;
+  justify-content: center;
+}
+
+.portfolio-button li:not(:last-child) {
+  margin-right: 8px;
 }
 
 .portfolio-projects {
   display: flex;
   flex-wrap: wrap;
-  padding: 0px 15px;
   gap: 30px;
-  margin-top: 34px;
-  justify-content: space-between;
+  margin-top: 50px;
 }
 
 .portfolio-picture {
   border: 1px solid var(--border-color);
-  width: 370px;
+  padding: 20px 24px 20px 24px;
 }
 
 .portfolio h2 {
@@ -346,7 +312,7 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  padding: 20px 24px 0px 24px;
+  margin-bottom: 4px;
 }
 
 .portfolio p {
@@ -354,27 +320,17 @@ img {
   font-size: 16px;
   line-height: 1.88;
   color: var(--tel-color);
-  padding: 4px 24px 20px 24px;
 }
 
 /* -------------footer----------------- */
 
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  background-color: var(--background-black);
 }
 
 .footer-container {
-  height: 252px;
-  width: 1200px;
-  align-items: center;
-  background-color: var(--background-black);
-  padding-left: 15px;
-  padding-right: 15px;
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer .logo {
