--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,6 @@ img {
 .hero {
   background-color: var(--background-black);
   text-align: center;
-  margin-bottom: 94px;
 }
 
 .hero .container {
@@ -176,7 +175,15 @@ img {
 .features,
 .our-works {
   background-color: var(--main-white-color);
-  margin-bottom: 94px;
+}
+
+.our-works {
+  padding-bottom: 94px;
+}
+
+.features .container {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .features ul,
@@ -185,7 +192,7 @@ img {
   gap: 30px;
 }
 
-.features .features h3 {
+.features h3 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -202,11 +209,6 @@ img {
   font-size: 14px;
   line-height: 1.71;
   color: var(--tel-color);
-}
-
-.our-works {
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .our-works h2,
